apps/hello-world/k8s/deployment-hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: devops-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: felipevarejao/hello-world:v3
        ports:
        - containerPort: 8080
