apps/hello-world/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: devops-lab
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
  - port: 8080
    targetPort: 8080
