apps/hello-world/k8s/ingress-hello-world.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello-world
  namespace: devops-lab
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: hello-world.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-world
              port:
                number: 8080
